--- a/views/cadastro/custo.html
+++ b/views/cadastro/custo.html
@@ -1,37 +1,14 @@
 {{if formCusto.create_form or formCusto.update_form:}}
     {{=formCusto[1].custom.begin}}
-    <div class="well">
-        <div class="row">
-            <div class="col-md-6">
-                {{=formCusto[1].custom.label.insumo}}
-                {{=formCusto[1].custom.widget.insumo}}
-            </div>
-            <div class="col-md-2">
-                {{=formCusto[1].custom.label.unidade}}
-                {{=formCusto[1].custom.widget.unidade}}
-            </div>
-            <div class="col-md-2">
-                {{=formCusto[1].custom.label.embalagem}}
-                {{=formCusto[1].custom.widget.embalagem}}
-            </div>
-            <div class="col-md-2">
-                {{=formCusto[1].custom.label.custo}}
-                {{=formCusto[1].custom.widget.custo}}
-            </div>
-        </div>
+    <div class="row">
+        {{=campo(6,formCusto[1].custom.label.insumo,formCusto[1].custom.widget.insumo)}}
+        {{=campo(2,formCusto[1].custom.label.unidade,formCusto[1].custom.widget.unidade)}}
+        {{=campo(2,formCusto[1].custom.label.embalagem,formCusto[1].custom.widget.embalagem)}}
+        {{=campo(2,formCusto[1].custom.label.custo,formCusto[1].custom.widget.custo)}}
     </div>
-    <div class="panel panel-info">
-        <div class="panel-body">
-            <div class="right">
-                {{=formCusto[1].custom.submit}}
-                {{=btnVoltar}}
-                {{=btnExcluir}}
-            </div>
-        </div>
-    </div>
+    <hr>
+    {{=btnRodape(formCusto[1].custom.submit,btnVoltar,btnExcluir)}}
     {{=formCusto[1].custom.end}}
 {{else:}}
-    <div class="well">
-        {{=formCusto}}
-    </div>
+    {{=formCusto}}
 {{pass}}
