--- a/views/cadastro/fornecedor.html
+++ b/views/cadastro/fornecedor.html
@@ -1,68 +1,38 @@
 {{extend 'layout.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Cadastro de Fornecedores</h4></div>
-        <div class="panel-body">
-            <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">Dados Cadastrais</a></li>
-                    <li><a data-toggle="tab" href="#menu1">Endereços</a></li>
-                    <li><a data-toggle="tab" href="#menu2">Contatos</a></li>
-                    <li><a data-toggle="tab" href="#menu3">Insumos</a></li>
-                </ul>
-            <div class="tab-content">
-                <div id="home" class="tab-pane fade in active">
-                    {{=formFornecedor.custom.begin}}
-                    <div class="well">
-                        <div class="row">
-                            <div class="col-md-6">
-                                {{=formFornecedor.custom.label.nome}}
-                                {{=formFornecedor.custom.widget.nome}}
-                            </div>
-                            <div class="col-md-6">
-                                {{=formFornecedor.custom.label.razao}}
-                                {{=formFornecedor.custom.widget.razao}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                {{=formFornecedor.custom.label.tipo}}
-                                {{=formFornecedor.custom.widget.tipo}}
-                            </div>
-                            <div class="col-md-4">
-                                {{=formFornecedor.custom.label.cnpj_cpf}}
-                                {{=formFornecedor.custom.widget.cnpj_cpf}}
-                            </div>
-                            <div class="col-md-4">
-                                {{=formFornecedor.custom.label.ie_rg}}
-                                {{=formFornecedor.custom.widget.ie_rg}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="panel panel-info">
-                        <div class="panel-body">
-                            <div class="right">
-                                {{=formFornecedor.custom.submit}}
-                                {{=btnNovo}}
-                                {{=btnVoltar}}
-                                {{=btnExcluir}}
-                            </div>
-                        </div>
-                    </div>
-                    {{=formFornecedor.custom.end}}
-                </div>
-                <div id="menu1" class="tab-pane fade">
-                    {{=formEnderecos}}
-                </div>
-                <div id="menu2" class="tab-pane fade">
-                    {{=formContatos}}
-                </div>
-                <div id="menu3" class="tab-pane fade">
-                    {{=formInsumo}}                    
-                </div>
+    {{=titulo("FORNECEDOR ","Cadastro de Fornecedores",btnNovo,btnVoltar)}}
+    <ul class="nav nav-pills">
+        <li class="active"><a data-toggle="tab" href="#home">Dados Cadastrais</a></li>
+            <li><a data-toggle="tab" href="#menu1">Endereços</a></li>
+            <li><a data-toggle="tab" href="#menu2">Contatos</a></li>
+            <li><a data-toggle="tab" href="#menu3">Insumos</a></li>
+        </ul>
+    </ul>
+    <div class="tab-content">
+        <div id="home" class="tab-pane fade in active">
+            {{=formFornecedor.custom.begin}}
+            <div class="row">
+                {{=campo(6,formFornecedor.custom.label.nome,formFornecedor.custom.widget.nome)}}
+                {{=campo(6,formFornecedor.custom.label.razao,formFornecedor.custom.widget.razao)}}
             </div>
+            <div class="row">
+                {{=campo(4,formFornecedor.custom.label.tipo,formFornecedor.custom.widget.tipo)}}
+                {{=campo(4,formFornecedor.custom.label.cnpj_cpf,formFornecedor.custom.widget.cnpj_cpf)}}
+                {{=campo(4,formFornecedor.custom.label.ie_rg,formFornecedor.custom.widget.ie_rg)}}
+            </div>
+            <hr>
+            {{=btnRodape(formFornecedor.custom.submit,btnExcluir)}}
+            {{=formFornecedor.custom.end}}
+        </div>
+        <div id="menu1" class="tab-pane fade">
+            {{=formEnderecos}}
+        </div>
+        <div id="menu2" class="tab-pane fade">
+            {{=formContatos}}
+        </div>
+        <div id="menu3" class="tab-pane fade">
+            {{=formInsumo}}                    
+        </div>
         </div>
     </div>
 </div>
