--- a/views/cadastro/fornecedores.html
+++ b/views/cadastro/fornecedores.html
@@ -1,10 +1,7 @@
 {{extend 'layout.html'}}
+
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Fornecedores</h4></div>
-            <div class="panel-body">
-                {{=form}}
-            </div>
-        </div>
-    </div>
+    {{=titulo("FORNECEDOR ","Lista de Fornecedores")}}
+    {{=form}}
 </div>
+
