--- a/views/obra/etapas.html
+++ b/views/obra/etapas.html
@@ -1,19 +1,7 @@
 {{extend 'layout.html'}}
+
 <div class="container">
-    {{=titulo("ETAPAS ","Cadastro de Etapas",btnNovo,btnVoltar)}}
-    {{if form_etapa.create_form or form_etapa.update_form:}}
-        {{=form_etapa[1].custom.begin}}
-        <div class="row">
-            {{=campo(6,form_etapa[1].custom.label.etapa,form_etapa[1].custom.widget.etapa)}}
-            {{=campo(2,form_etapa[1].custom.label.item,form_etapa[1].custom.widget.item)}}
-        </div>
-        <div class="row">
-            {{=campo(8,form_etapa[1].custom.label.tarefas,form_etapa[1].custom.widget.tarefas)}}
-        </div>
-        <hr>
-        {{=btnRodape(form_etapa[1].custom.submit,btnExcluir)}}
-        {{=form_etapa[1].custom.end}}
-    {{else:}}
-        {{=form_etapa}}
-    {{pass}}
+    {{=titulo("ETAPAS ","Lista de Etapas")}}
+    {{=form_etapa}}
 </div>
+
