--- a/views/obra/obras.html
+++ b/views/obra/obras.html
@@ -1,10 +1,5 @@
 {{extend 'layout.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Obras</h4></div>
-            <div class="panel-body">
-                {{=gridObras}}
-            </div>
-        </div>
-    </div>
+    {{=titulo("OBRAS ","Orçamento de Obras")}}
+    {{=gridObras}}
 </div>
