--- a/views/financeiro/conta_corrente.html
+++ b/views/financeiro/conta_corrente.html
@@ -2,18 +2,17 @@
 {{extend 'layout.html'}}
 {{include 'modal.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Conta Corrente</h4></div>
-        <div class="panel-body">
-            {{=form_pesq.custom.begin}}
-            <div class="row">
-            <div class="col-md-6"> Conta {{=form_pesq.custom.widget.conta}} </div>
-            <div class="col-md-2"> Data Inicial {{=form_pesq.custom.widget.datainicial}} </div>
-            <div class="col-md-2"> Data Final {{=form_pesq.custom.widget.datafinal}} </div>
-            <div class="col-md-1"> Filtro {{=form_pesq.custom.submit}}</div>
-            {{=form_pesq.custom.end}}
-        </div><!-- /.row -->
-        {{=form_extrato}}
+    {{=titulo("FINANCEIRO ","Conta Corrente")}}
+    {{=form_pesq.custom.begin}}
+    <div class="row">
+        <div class="col-md-6"> Conta {{=form_pesq.custom.widget.conta}} </div>
+        <div class="col-md-2"> Data Inicial {{=form_pesq.custom.widget.datainicial}} </div>
+        <div class="col-md-2"> Data Final {{=form_pesq.custom.widget.datafinal}} </div>
+        <div class="col-md-1"> Filtro {{=form_pesq.custom.submit}}</div>
+    </div>
+    {{=form_pesq.custom.end}}
+    <hr>
+    {{=form_extrato}}
     </div>
 </div>
 
