--- a/views/financeiro/transferencia.html
+++ b/views/financeiro/transferencia.html
@@ -3,8 +3,9 @@
     {{=titulo("FINANCEIRO ","Transferência entre Contas",btnNovo,btnVoltar)}}
     {{=formTransferencia.custom.begin}}
     <div class="row">
-        {{=campo(5,formTransferencia.custom.label.origem,formTransferencia.custom.widget.origem)}}
-        {{=campo(5,formTransferencia.custom.label.destino,formTransferencia.custom.widget.destino)}}
+        {{=campo(2,formTransferencia.custom.label.dttransferencia,formTransferencia.custom.widget.dttransferencia)}}
+        {{=campo(4,formTransferencia.custom.label.origem,formTransferencia.custom.widget.origem)}}
+        {{=campo(4,formTransferencia.custom.label.destino,formTransferencia.custom.widget.destino)}}
         {{=campo(2,formTransferencia.custom.label.valor,formTransferencia.custom.widget.valor)}}
     </div>
     <hr>
