--- a/views/obra/insumos.html
+++ b/views/obra/insumos.html
@@ -1,11 +1,6 @@
 {{extend 'layout.html'}}
 
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h6>Insumos</h6></div>
-            <div class="panel-body">
-                {{=grid}}
-            </div>
-        </div>
-    </div>
+	{{=titulo("INSUMOS ","Lista de Insumos")}}
+    {{=grid}}
 </div>
