--- a/views/pagar/compraInsumos.html
+++ b/views/pagar/compraInsumos.html
@@ -3,7 +3,7 @@
     {{=formInsumos[1].custom.begin}}
     <div class="well">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-7">
                 {{=formInsumos[1].custom.label.insumo}}
                 <div class="input-group">
                     {{=formInsumos[1].custom.widget.insumo}}
@@ -12,6 +12,13 @@
                     </span>
                 </div><!-- /input-group -->
             </div>
+            <div class="col-md-5">
+                {{=formInsumos[1].custom.label.detalhe}}
+                {{=formInsumos[1].custom.widget.detalhe}}
+            </div>
+        </div>
+        <p></p>
+        <div class="row">
             <div class="col-md-1">
                 {{=formInsumos[1].custom.label.unidade}}
                 {{=formInsumos[1].custom.widget.unidade}}
