--- a/views/pagar/entrada.html
+++ b/views/pagar/entrada.html
@@ -27,6 +27,7 @@
             <div class="row">
                 {{=campo(3,form_pagar.custom.label.condicao,form_pagar.custom.widget.condicao)}} 
                 {{=campo(3,form_pagar.custom.label.tipo,form_pagar.custom.widget.tipo)}}
+                {{=campo(4,form_pagar.custom.label.remetente,form_pagar.custom.widget.remetente)}}
                 
             </div>
             <hr>
