--- a/views/obra/demanda.html
+++ b/views/obra/demanda.html
@@ -5,7 +5,8 @@
     
     <ul class="nav nav-pills">
         <li class="active"><a data-toggle="tab" href="#home">Dados da Demanda</a></li>
-        <li><a data-toggle="tab" href="#menu1">Despesas</a></li>
+        <li><a data-toggle="tab" href="#menu1">Atividades</a></li>
+        <li><a data-toggle="tab" href="#menu2">Despesas</a></li>
     </ul>
     <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
@@ -24,6 +25,9 @@
             {{=formDemanda.custom.end}}
         </div>
     <div id="menu1" class="tab-pane fade">
+        {{=formAtividades}}
+    </div>
+    <div id="menu2" class="tab-pane fade">
         {{=formDespesas}}
     </div>
 </div>
